# bazel-play

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  cgal.BUILD  main.cpp
.github/workflows/: bazel-build.yaml
