load("@rules_foreign_cc//foreign_cc:cmake.bzl", "cmake_external")

cmake_external(
    name = "spdlog",
    lib_source = "https://github.com/gabime/spdlog/archive/refs/tags/v1.15.1.tar.gz",
    lib_name = "spdlog",
    cmake_options = [
        "-DSPDLOG_BUILD_EXAMPLES=OFF",
        "-DSPDLOG_BUILD_TESTS=OFF",
        "-DSPDLOG_FMT_EXTERNAL=OFF",
    ],
    install_prefix = "external/spdlog",
    build_file = "@//third_party:spdlog.BUILD",
)

cmake_external(
    name = "cgal",
    lib_source = "https://github.com/CGAL/cgal/archive/refs/tags/v6.0.1.tar.gz",
    lib_name = "cgal",
    install_prefix = "external/cgal",
    build_file = "@//third_party:cgal.BUILD",
)
