load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cgal",
    build_file = "//third-party:cgal.BUILD",
    urls = ["https://github.com/CGAL/cgal/archive/refs/tags/v6.0.1.tar.gz"],
    strip_prefix = "cgal-6.0.1",
    integrity = "sha256-F+6GdQuYsO/vNWtw8b7WtUGzVzvSkR9A/UAzjTVFJvU="
)
